--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Deploy NodeJS Application to Hostinger
+name: Deploy NodeJS Application to Azure VM
 
 on:
   push:
@@ -17,7 +17,7 @@ jobs:
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SSH_HOST }}
-          username: root
+          username: Admin12
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd /root/nodejs-application-deploy-github-actions
